--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <img src="Kolping.png" style="display: block; margin-left: auto; margin-right: auto;">
-<div style="display: block; text-align: center; font-size: 64px">&#x1f355 Abholbereit: [ %d ] &#x1f355</div>
+<div style="display: block; text-align: center; font-size: 64px">&#x1f355 Abholbereit: [ 400 ] &#x1f355</div>
 
 </body>
 </html>
