--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<head>
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+</head>
 <html>
 <body>
-
 <img src="Kolping.png" style="display: block; margin-left: auto; margin-right: auto;">
 <div style="display: block; text-align: center; font-size: 64px">&#x1f355 Abholbereit: [ 400 ] &#x1f355</div>
-
 </body>
 </html>
