--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv='pragma' content='no-cache'>
 </head>
 <html>
-<body>
-<img src="Kolping.png" style="display: block; margin-left: auto; margin-right: auto;">
-<div style="display: block; text-align: center; font-size: 64px">&#x1f355 Abholbereit: [ 403 ] &#x1f355</div>
+<body style="display: block; width: 100%;">
+<img src="Kolping.png" style="display: block; width: 80%; margin-left: auto; margin-right: auto;">
+<iframe style="display: block; width: 80%; border: 0; margin-left: auto; margin-right: auto;" src="iframe.html">
 </body>
 </html>
