--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <html>
 <body style="display: block; width: 100%;">
 <img src="Kolping.png" style="display: block; width: 80%; margin-left: auto; margin-right: auto;">
-<iframe style="display: block; width: 80%; border: 0; margin-left: auto; margin-right: auto;" src="iframe.html">
+<iframe style="display: block; width: 80%; border: 0; margin-left: auto; margin-right: auto;" src="https://raw.githubusercontent.com/kolpingeppingen/kolpingeppingen.github.io/main/iframe.html">
 </body>
 </html>
