--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body style="display: block; width: 100%;">
 <img src="Kolping.png" style="display: block; width: 80%; margin-left: auto; margin-right: auto;">
 <body style="display: block; width: 90%;">
-<div style="display: block; text-align: center; font-size: 64px">&#x1f355 Abholbereit: [ 403 ] &#x1f355</div>
+<iframe style="display: block; width: 80%; border: 0; margin-left: auto; margin-right: auto;" src="http://nivuflow.com/kolping/iframe.html">
 </body>
 </html>
