--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <meta http-equiv='cache-control' content='no-cache'> 
 <meta http-equiv='expires' content='0'> 
 <meta http-equiv='pragma' content='no-cache'>
+<script>
+window.setInterval("reloadIFrame();", 5000);
+
+function reloadIFrame() {
+ diframes = document.getElementsByName("iframe")[0].location.reload();
+}
+</script>
 </head>
 <html>
 <body style="display: block; width: 100%;">
 <img src="Kolping.png" style="display: block; width: 80%; margin-left: auto; margin-right: auto;">
 <body style="display: block; width: 95%;">
-<iframe style="display: block; width: 95%; border: 0; margin-left: auto; margin-right: auto;" src="https://nivuflow.com/kolping/iframe.html">
+<iframe name="iframe" style="display: block; width: 95%; border: 0; margin-left: auto; margin-right: auto;" src="https://nivuflow.com/kolping/iframe.html">
 </body>
 </html>
