--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta http-equiv='pragma' content='no-cache'>
 <script>
 window.setInterval("reloadIFrame();", 5000);
-
 function reloadIFrame() {
- diframes = document.getElementsByName("iframe")[0].location.reload();
+  document.getElementById("iframe").contentWindow.location.reload();
 }
 </script>
 </head>
@@ -15,6 +14,6 @@ function reloadIFrame() {
 <body style="display: block; width: 100%;">
 <img src="Kolping.png" style="display: block; width: 80%; margin-left: auto; margin-right: auto;">
 <body style="display: block; width: 95%;">
-<iframe name="iframe" style="display: block; width: 95%; border: 0; margin-left: auto; margin-right: auto;" src="https://nivuflow.com/kolping/iframe.html">
+<iframe id="iframe" style="display: block; width: 95%; border: 0; margin-left: auto; margin-right: auto;" src="https://nivuflow.com/kolping/iframe.html">
 </body>
 </html>
