--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body style="display: block; width: 100%;">
 <img src="Kolping.png" style="display: block; width: 80%; margin-left: auto; margin-right: auto;">
 <body style="display: block; width: 95%;">
-<iframe id="iframe" style="display: block; width: 95%; height: auto; border: 0; margin-left: auto; margin-right: auto;" src="https://nivuflow.com/kolping/iframe.html">
+<iframe id="iframe" style="display: block; width: 95%; height: 1000px; border: 0; margin-left: auto; margin-right: auto;" src="https://nivuflow.com/kolping/iframe.html">
 </body>
 </html>
